fixed overlap cards

--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@
 .hgt{
   height: 25rem;
 }
-
+/* 
 iframe{
   height: 500px;
   width: 500px;
-}
+} */
 
 .imgsz{
   height: 200px;
@@ -40,4 +40,6 @@ iframe{
   height: 15vh;
 }
 
-.
+.spill{
+  margin-bottom: -15;
+}
